# src/Presentation.Web.Server/wwwroot/swagger_system.json
@@ -410,6 +410,10 @@
           "type": "string",
           "x-nullable": true
         },
+        "Language": {
+          "type": "string",
+          "x-nullable": true
+        },
         "Sku": {
           "type": "string",
           "x-nullable": true
